--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@types/recharts": "^1.8.29",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.13.0",
     "use-debounce": "^10.0.3",
     "zod": "^3.23.8"
   },
@@ -23,9 +25,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "postcss": "^8.4.47",
     "sass": "^1.79.4",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5"
   }
 }
